# rs-versioned

./: Cargo.toml  README.md  README.tpl
src/: lib.rs
